mostrador de batida pronto

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         html, body {
-            background: #fff;
+            background: #f00;
             height: 100%;
             margin: 0;
             padding: 0;
@@ -21,17 +21,17 @@
             bottom: 0px;
             Left: 0px;
             right: 0px;
-            border: 10px solid white;
+            border: 8px solid grey;
             image-rendering: pixelated;
             image-rendering: crisp-edges;
             image-rendering: -moz-crisp-edges;
-            width: 500px;
-            height: 500px;
+            width: 400px;
+            height: 100px;
         }
     </style>
 </head>
 <body>
-    <canvas id="canvas" width="50" height="50"></canvas>
+    <canvas id="canvas" width="4" height="1"></canvas>
     <script src="index.js"></script>
 </body>
 </html>
