só mudando o html de lugar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>beats</title>
     <style>
         html, body {
             background: #f00;
@@ -32,6 +32,6 @@
 </head>
 <body>
     <canvas id="canvas" width="4" height="1"></canvas>
-    <script src="index.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
