--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <audio src="/Hit_Hurt2.wav"></audio>
+    <audio src="./src/Hit_Hurt2.wav"></audio>
     <canvas id="canvas" width="4" height="1"></canvas>
     <script src="./src/index.js"></script>
 </body>
