--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>beats</title>
     <style>
@@ -36,7 +37,7 @@
     </style>
 </head>
 <body>
-    <audio src="./src/Hit_Hurt2.wav"></audio>
+    <audio id="som" src="./src/Hit_Hurt2.wav"></audio>
     <!-- <canvas id="canvas" width="4" height="1"></canvas> -->
     <div></div>
     <script src="./src/index.js"></script>
