usando lista agr

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>beats</title>
     <style>
         html, body {
-            background: #f00;
+            background: #000;
             height: 100%;
             margin: 0;
             padding: 0;
@@ -37,7 +37,8 @@
     </style>
 </head>
 <body>
-    <audio id="som" src="./src/Hit_Hurt2.wav"></audio>
+    <audio id="kick" src="./src/kick.wav"></audio>
+    <audio id="hihat" src="./src/hihat.mp3"></audio>
     <!-- <canvas id="canvas" width="4" height="1"></canvas> -->
     <div></div>
     <script src="./src/index.js"></script>
