--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.43/Tone.js" integrity="sha512-EykMJ8DUk41zHUpEBrlm8oWxXqmQXi5dKBvuaEiziqFMrcfGYsXz1KwBMA+ejy6noTfwVGwer1WSYrbNBrjT2w==" crossorigin="anonymous"></script>
     <title>beats</title>
     <style>
         html, body {
@@ -37,8 +38,8 @@
     </style>
 </head>
 <body>
-    <audio id="kick" src="./src/kick.wav"></audio>
-    <audio id="hihat" src="./src/hihat.mp3"></audio>
+    <audio id="kick" preload="auto" src="./src/kick.wav"></audio>
+    <audio id="hihat" preload="auto" src="./src/hihat.mp3"></audio>
     <!-- <canvas id="canvas" width="4" height="1"></canvas> -->
     <div></div>
     <script src="./src/index.js"></script>
