--- a/antigo.html
+++ b/antigo.html
@@ -42,6 +42,6 @@
     <audio id="hihat" preload="auto" src="./src/hihat.mp3"></audio>
     <!-- <canvas id="canvas" width="4" height="1"></canvas> -->
     <div></div>
-    <script src="./src/index.js"></script>
+    <script src="./src/antigo.js"></script>
 </body>
 </html>
