--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>four orbits</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script>
     <link rel="stylesheet" href="./index.css">
-     <link rel="icon" 
+      <link rel="icon" 
       type="image/png" 
       href="./src/icon.ico">
-</head>
-
-<body>
-<script src="./index.js" type="module" charset="utf-8"></script>
-</body>
-
+  </head>
+  <body> 
+    <canvas id="canvas"></canvas>
+    <script src="./src/index.js" type="module" charset="utf-8"></script>
+  </body>
 </html>
